# xoshiro

./: CMakeLists.txt  README.md  pkg.yaml  random.h  random_generator.h
src/: CMakeLists.txt  random-config.cmake.in  random.cpp  random.h  random_generator.h  xoshiro-config.cmake.in  xoshiro.cpp  xoshiro.h  xoshiro_gen.h
tests/unit/: CMakeLists.txt  oshinro_random_test.cpp
